# Meta-Hackathon

./: .dockerignore  .env.example  .gitignore  CREDENTIALS_CONFIG.py  DOCKER_NEW_TOKEN_TEST.md  Dockerfile  FINAL_VERIFICATION.txt  MODEL_AND_IMAGE_EXPLANATION.py  Makefile  OPENENV_TEST_RESULTS.md  README.md  SUBMISSION_REPORT.md  VALIDATION_REFERENCE.py  deploy.sh  docker-compose.yml  inference.py  openenv.yaml  openenv_server.py  pre_validation.py  pyproject.toml  requirements.txt  requirements_openenv.txt  requirements_relaxed.txt  validate-submission.sh
alembic/: README  env.py
alembic/versions/: 0001_create_timescaledb_hypertables.py  0002_trading_analytics_schema_optimization.py  0003_add_user_email_to_portfolios.py  0004_live_price_ticks_hypertable.py  0005_create_trade_log.py  0006_add_ai_signals_fields.py
app/: main.py
app/cache/: redis_client.py
app/config/: asset_list.py  asset_universe.py
app/connectors/: __init__.py  alpaca.py  base.py  ibkr.py  oanda.py
app/core/: audit.py  cache.py  config.py  database.py  errors.py  logging.py  supabase_client.py  websocket.py
app/models/: __init__.py  alert.py  event.py  gti.py  ingestion.py  market.py  persistence.py  signal.py  trade.py
app/pipelines/: backtesting.py  feature_engineering.py  geopolitical_news.py  gti_engine.py  impact_graph.py  ingestion_adapters.py  live_indicators.py  macro_data.py  market_data.py  market_feeds.py  market_model.py  nlp_pipeline.py  signal_generator.py  simulators.py
app/repositories/: base.py  event_repo.py  gti_repo.py  market_repo.py  persistence_repo.py  signal_repo.py
app/schemas/: backtest.py  event.py  gti.py  health.py  portfolio.py  scenario.py  signal.py  waitlist.py
app/services/: alert_service.py  asset_discovery_service.py  backtest_service.py  commodities_service.py  crypto_service.py  forex_service.py  graph_service.py  gti_service.py  ingestion_service.py  macro_service.py  market_engine.py  market_service.py  persistence_service.py  risk_service.py  signal_service.py  stocks_service.py  trade_setup.py  waitlist_service.py
app/tasks/: celery_app.py  gti_tasks.py  ingestion_tasks.py  market_tasks.py  signal_tasks.py
app/trading/: executor.py
config/: assets.yaml  data_sources.yaml
db/: schema.sql
frontend/: package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
openenv/: __init__.py  environment.py  graders.py  models.py  scenarios.py  server.py
scripts/: seed.py  test_ai_signals.py
server/: app.py
tests/: conftest.py
trading/: OUTCOME_LOG.md  PAPER_TRADES.md  PAPER_TRADES_ROUND2.md  README.md  SNAPSHOT_2026-03-16.md
(+63 files in other folders)
