[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geotrade"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    # Web
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "httpx==0.27.0",
    "slowapi==0.1.9",

    # Data validation
    "pydantic==2.7.4",
    "pydantic-settings==2.3.1",

    # DB
    "sqlalchemy[asyncio]==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",

    # Cache / Queue
    "redis[hiredis]==5.0.5",
    "celery[redis]==5.4.0",

    # NLP
    "transformers==4.41.2",
    "sentence-transformers==3.0.1",
    "torch>=2.0.0",
    "vaderSentiment==3.3.2",
    "hdbscan==0.8.38.post1",
    "rapidfuzz==3.9.1",
    "spacy>=3.7.0",

    # ML / data
    "lightgbm==4.3.0",
    "xgboost==2.0.3",
    "scikit-learn==1.5.0",
    "polars==0.20.31",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "scipy==1.13.1",

    # Market data
    "yfinance>=0.2.40",
    "oandapyV20>=0.7.2",
    "ccxt>=4.3.0",

    # Observability
    "structlog==24.2.0",
    "opentelemetry-sdk==1.24.0",
    "opentelemetry-instrumentation-fastapi==0.45b0",
    "opentelemetry-instrumentation-sqlalchemy==0.45b0",
    "opentelemetry-exporter-otlp==1.24.0",
    "prometheus-client==0.20.0",

    # Utilities
    "tenacity==8.3.0",
    "msgpack==1.0.8",
    "supabase>=2.3.0",
    "xxhash==3.4.1",
    "python-dateutil==2.9.0",
    "pytz==2024.1",
    "aiofiles==23.2.1",
    "feedparser==6.0.11",
    "httpx[http2]==0.27.0",
    "websockets>=15.0.1",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "pytest-timeout==2.3.1",
    "factory-boy==3.3.0",
    "faker==25.9.1",
    "ruff==0.4.9",
    "mypy==1.10.0",
    "pre-commit==3.7.1",
    "freezegun==1.5.1",
    "respx==0.21.1",
    "locust==2.29.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "W", "F", "I", "N", "UP", "ANN", "S", "B", "A", "C4", "PT", "SIM", "RUF"]
ignore = ["ANN101", "ANN102", "S101", "S311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 60
addopts = "--tb=short -v"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/migrations/*"]
